; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_compress.c_on_config_gzip.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_compress.c_on_config_gzip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i64 }
%struct.compress_configurator_t = type { %struct.TYPE_8__* }

@.str = private unnamed_addr constant [7 x i8] c"OFF,ON\00", align 1
@all_off = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@DEFAULT_GZIP_QUALITY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32*, i32*)* @on_config_gzip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_config_gzip(%struct.TYPE_7__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.compress_configurator_t*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = bitcast i8* %13 to %struct.compress_configurator_t*
  store %struct.compress_configurator_t* %14, %struct.compress_configurator_t** %8, align 8
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i64 @h2o_configurator_get_one_of(%struct.TYPE_7__* %15, i32* %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %9, align 4
  %19 = icmp eq i32 %18, -1
  br i1 %19, label %20, label %21

20:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %36

21:                                               ; preds = %3
  %22 = load %struct.compress_configurator_t*, %struct.compress_configurator_t** %8, align 8
  %23 = getelementptr inbounds %struct.compress_configurator_t, %struct.compress_configurator_t* %22, i32 0, i32 0
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %23, align 8
  %25 = bitcast %struct.TYPE_8__* %24 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %25, i8* align 4 bitcast (%struct.TYPE_8__* @all_off to i8*), i64 4, i1 false)
  %26 = load i32, i32* %9, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %21
  %29 = load i32, i32* @DEFAULT_GZIP_QUALITY, align 4
  %30 = load %struct.compress_configurator_t*, %struct.compress_configurator_t** %8, align 8
  %31 = getelementptr inbounds %struct.compress_configurator_t, %struct.compress_configurator_t* %30, i32 0, i32 0
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 0
  store i32 %29, i32* %34, align 4
  br label %35

35:                                               ; preds = %28, %21
  store i32 0, i32* %4, align 4
  br label %36

36:                                               ; preds = %35, %20
  %37 = load i32, i32* %4, align 4
  ret i32 %37
}

declare dso_local i64 @h2o_configurator_get_one_of(%struct.TYPE_7__*, i32*, i8*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
